5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1621_2922.log
== TEST (2019-04-01 18:08:56) 
-- CODE:
from math import *
x = float(input("alcance o valor final Qf: "))


-- OUTPUT:
10.793225305981728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:12:19) 
-- CODE:
from math import *
x = float(input("alcance o valor final Qf: "))

i = sqrt (Qf//Q0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = sqrt (Qf//Q0)
NameError: name 'Qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:44) 
-- CODE:
from math import *
x = float(input("alcance o valor final Qf: "))

i = sqrt t(Qf//Q0)-1
y = float(input("tempon de investimento: "))

-- ERROR:
File "XXXX", line 4
    i = sqrt t(Qf//Q0)-1
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:14:56) 
-- CODE:
from math import *
x = float(input("alcance o valor final Qf: "))

i = sqrt (Qf//Q0)-1
y = float(input("tempon de investimento: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = sqrt (Qf//Q0)-1
NameError: name 'Qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:16:51) 
-- CODE:
from math import *
x = float(input("alcance o valor final Qf: "))

i = sqrt (Qf//Q0)-1
y = float(input("tempon de investimento: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i = sqrt (Qf//Q0)-1
NameError: name 'Qf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
